--- a/client/build.gradle
+++ b/client/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'eclipse'
 apply plugin: 'java'
 apply plugin: 'com.diffplug.spotless'
 
-group = 'org.openapitools'
-version = 'v1'
+group = 'com.cloudmersive'
+version = '10.0.0'
 
 buildscript {
     repositories {
@@ -89,7 +89,7 @@ if(hasProperty('target') && target == 'android') {
     publishing {
         publications {
             maven(MavenPublication) {
-               artifactId = 'openapi-java-client'
+               artifactId = 'cloudmersive-barcode-api-java-client'
                from components.java
             }
         }
