--- a/client/pom.xml
+++ b/client/pom.xml
@@ -1,13 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.openapitools</groupId>
-    <artifactId>openapi-java-client</artifactId>
+    <groupId>com.cloudmersive</groupId>
+    <artifactId>cloudmersive-barcode-api-java-client</artifactId>
     <packaging>jar</packaging>
-    <name>openapi-java-client</name>
-    <version>v1</version>
-    <url>https://github.com/openapitools/openapi-generator</url>
-    <description>OpenAPI Java</description>
+    <name>cloudmersive-barcode-api-java-client</name>
+    <version>10.0.0</version>
+    <url>https://cloudmersive.com/barcode-api</url>
+    <description>Cloudmersive Barcode API Java Client</description>
     <scm>
         <connection>scm:git:git@github.com:openapitools/openapi-generator.git</connection>
         <developerConnection>scm:git:git@github.com:openapitools/openapi-generator.git</developerConnection>
@@ -16,18 +16,18 @@
 
     <licenses>
         <license>
-            <name>Unlicense</name>
-            <url>http://unlicense.org</url>
+            <name>Apache License 2.0</name>
+            <url>https://www.apache.org/licenses/LICENSE-2.0.html</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
 
     <developers>
         <developer>
-            <name>OpenAPI-Generator Contributors</name>
+            <name>Cloudmersive</name>
             <email>team@openapitools.org</email>
-            <organization>OpenAPITools.org</organization>
-            <organizationUrl>http://openapitools.org</organizationUrl>
+            <organization>Cloudmersive</organization>
+            <organizationUrl>https://cloudmersive.com/</organizationUrl>
         </developer>
     </developers>
 
