--- a/packageconfig.json
+++ b/packageconfig.json
@@ -7,6 +7,7 @@
   
       "developerName": "Cloudmersive",
       "developerOrganization": "Cloudmersive",
+      "developerEmail": "support@cloudmersive.com",
       "developerOrganizationUrl": "https://cloudmersive.com/",
   
       "licenseName": "Apache License 2.0",
