--- a/client/pom.xml
+++ b/client/pom.xml
@@ -25,7 +25,7 @@
     <developers>
         <developer>
             <name>Cloudmersive</name>
-            <email>team@openapitools.org</email>
+            <email>support@cloudmersive.com</email>
             <organization>Cloudmersive</organization>
             <organizationUrl>https://cloudmersive.com/</organizationUrl>
         </developer>
