--- a/client/pom.xml
+++ b/client/pom.xml
@@ -11,7 +11,7 @@
     <scm>
         <connection>scm:git:git@github.com:openapitools/openapi-generator.git</connection>
         <developerConnection>scm:git:git@github.com:openapitools/openapi-generator.git</developerConnection>
-        <url>https://github.com/openapitools/openapi-generator</url>
+        <url>https://github.com/Cloudmersive/Cloudmersive.APIClient.Java.Barcode.git</url>
     </scm>
 
     <licenses>
