--- a/packageconfig.json
+++ b/packageconfig.json
@@ -15,6 +15,8 @@
   
       "artifactVersion": "10.0.0",
 
+      "scmConnection": "https://github.com/Cloudmersive/Cloudmersive.APIClient.Java.Barcode.git",
+    "scmDeveloperConnection": "https://github.com/Cloudmersive/Cloudmersive.APIClient.Java.Barcode.git",
       "scmUrl": "https://github.com/Cloudmersive/Cloudmersive.APIClient.Java.Barcode.git"
     }
   }
